# user-api-ORB

./: .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  main.py  pyproject.toml
apps/auth/admin/: __init__.py  refresh_token.py  verification.py
apps/auth/api/: deps.py  permissions.py  router.py
apps/auth/cli/: create_admin.py
apps/auth/models/: __init__.py  refresh_token.py  verification.py
apps/auth/schemas/: __init__.py  common.py  token.py  user.py
apps/auth/service/: auth.py
apps/auth/utils/: admin_auth.py  jwt.py  verification.py
apps/auth/utils/email/: __init__.py  base.py  console.py  factory.py  smtp.py
apps/users/admin/: user.py
apps/users/api/: router.py
apps/users/domain/: __init__.py  roles.py
apps/users/models/: __init__.py  user.py
apps/users/schemas/: __init__.py  user.py
apps/users/service/: __init__.py  user.py
bootstrap/: admin.py  events.py  routers.py  scheduler.py
core/: datetime.py
core/db/: __init__.py  base.py  deps.py  engine.py  mixins.py  session.py
core/db/factory/: deps.py  engine.py  session.py
core/logging/: logger.py
core/repository/: __init__.py  base.py
core/security/: __init__.py  password.py
core/settings/: __init__.py  core.py
infrastructure/scheduler/: __init__.py  base.py
infrastructure/storage/: __init__.py  s3.py
logs/: app.log.2026-03-12
migrations/: env.py
migrations/versions/: 2026_07_03_04-47_init_users_api.py
templates/sqladmin/: login.html
