[tool.poetry]
name = "base-structure-fastapi"
version = "0.1.0"
description = ""
authors = ["Temurbek Rakhimkuliev <timurxboy@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = {extras = ["standard"], version = "^0.128.0"}
alembic = "^1.18.2"
sqlalchemy = "^2.0.46"
pydantic-settings = "^2.12.0"
sqladmin = "^0.22.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
asyncpg = "^0.31.0"
uvicorn = "^0.40.0"
fastapi-pagination = "^0.15.8"
apscheduler = "^3.11.2"
aiosmtplib = "^3.0.2"
email-validator = "^2.2.0"
aioboto3 = {version = "^15.5.0", optional = true}
aiofiles = {version = "^24.0.0", optional = true}
pyjwt = "^2.10.1"
bcrypt = "<4.0"
itsdangerous = "^2.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.25.0"
httpx = "^0.28.0"

# ---- Ruff (linting + formatting) ----
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "core", "bootstrap", "infrastructure"]

# ---- Mypy ----
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

[tool.poetry.extras]
s3 = [
    "aioboto3",
    "aiofiles",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

